Ajuste animaci'on banner principal

--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,18 @@
   }
 }
 
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 0.8;
+  }
+}
+
+.animate-fade-in {
+  animation: fadeIn 1.2s ease-out forwards;
+}
+
+
