--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,11 @@
 .custom-bottom-round {
   clip-path: ellipse(100% 90% at 50% 0%);
 }
+
+h1, h2, h3, h4 {
+  font-family: 'Playfair Display', serif;
+}
+
+body, p, a, span, li {
+  font-family: 'Source Sans Pro', sans-serif;
+}
