--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,6 @@
   animation: floatDown 1.2s ease-out forwards;
 }
 
-
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -46,30 +45,70 @@
   animation: fadeIn 0.4s ease-out forwards;
 }
 
-
 /*Estilo de la imagen en seccion about us*/
 .custom-bottom-round {
   clip-path: ellipse(100% 90% at 50% 0%);
 }
 
-h1, h2, h3, h4 {
-  font-family: 'Playfair Display', serif;
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Playfair Display", serif;
 }
 
-body, p, a, span, li {
-  font-family: 'Source Sans Pro', sans-serif;
+body,
+p,
+a,
+span,
+li {
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 /* Animacion de svg menu nav en movil version */
 .eyes-bounce {
-      animation: bounceUp 6s ease-in-out 2s infinite;
+  animation: bounceUp 6s ease-in-out 2s infinite;
+}
+
+@keyframes bounceUp {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
+.wiggle {
+  transform-origin: center;
+  animation: wiggle 2s ease-in-out infinite;
+}
+
+@keyframes wiggle {
+  0%,
+  100% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(3deg);
+  }
+  50% {
+    transform: rotate(-3deg);
+  }
+  75% {
+    transform: rotate(2deg);
+  }
+}
+  .flip {
+      transform-origin: center;
+      animation: flipY 10s ease-in-out infinite;
     }
 
-    @keyframes bounceUp {
+    @keyframes flipY {
       0%, 100% {
-        transform: translateY(0);
+        transform: rotateY(0deg);
       }
       50% {
-        transform: translateY(-10px);
+        transform: rotateY(180deg);
       }
     }
